src/objects/SomDig_Inventarklasse__c.object
<CustomObject>
    <description>zentrales Objekt für alle Inventarklassen der 71m digital</description>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AuftragstypId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auftragstyp</label>
        <referenceTo>SomDig_Auftragstyp__c</referenceTo>
        <relationshipLabel>Inventarklassen</relationshipLabel>
        <relationshipName>Inventarklassen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <description>Hilfsfeld für die DWH-Schnittstelle. Liefert Auftragstyp als Text.</description>
        <formula>SomDig_AuftragstypId__r.Name</formula>
        <inlineHelpText>Hilfsfeld für die DWH-Schnittstelle. Liefert Auftragstyp als Text.</inlineHelpText>
        <label>Auftragstyp DWH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Beschreibung__c</fullName>
        <inlineHelpText>Bitte beschreibe hier ausführlich mit Beispielen die Inventarklasse.</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_InventarklasseName__c</fullName>
        <description>Aktuell kein Kriterium zu Bestimmung der Inventarklasse, diese Info hier wird rein informativ hinterlegt. Mehrfachauswahl pro Inventarklasse aktuell möglich.</description>
        <inlineHelpText>Aktuell kein Kriterium zu Bestimmung der Inventarklasse, diese Info hier wird rein informativ hinterlegt. Mehrfachauswahl pro Inventarklasse aktuell möglich.</inlineHelpText>
        <label>Inventarklasse Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Umfeld Einzelformat</fullName>
                </value>
                <value>
                    <fullName>Umfeld Einzelformat-Rotation</fullName>
                </value>
                <value>
                    <fullName>Umfeld Channel</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Premium-Rotation</fullName>
                </value>
                <value>
                    <fullName>Themen-Rotation</fullName>
                </value>
                <value>
                    <fullName>Standard-Rotation</fullName>
                </value>
                <value>
                    <fullName>Umfeld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_InventarklasseNummer__c</fullName>
        <inlineHelpText>Welche Inventarklasse wir hier beschrieben?</inlineHelpText>
        <label>Inventarklasse Nummer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Kapitalisierung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Info, ob Inventarklassen kapitalisierbar sind (ja/nein)</description>
        <inlineHelpText>Info, ob Inventarklassen kapitalisierbar sind (ja/nein)</inlineHelpText>
        <label>Kapitalisierung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Welche Mediagattung ist für diese Inventarklasse relevant?</inlineHelpText>
        <label>Mediagattung</label>
        <referenceTo>SomDig_Mediagattung__c</referenceTo>
        <relationshipLabel>Inventarklassen</relationshipLabel>
        <relationshipName>Inventarklassen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Welche Mediagattungs-Diffenrenzierung ist für diese Inventarklasse relevant? Info kommt an der Position via Werbeform.</description>
        <inlineHelpText>Welche Mediagattungs-Diffenrenzierung ist für diese Inventarklasse relevant? Info kommt an der Position via Werbeform.</inlineHelpText>
        <label>Mediagattungs-Differenzierung</label>
        <referenceTo>SomDig_MediagattungsDifferenzierung__c</referenceTo>
        <relationshipLabel>Inventarklassen</relationshipLabel>
        <relationshipName>Inventarklassen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsSegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feld ist aus fachlicher Sicht obsolet. Wird noch benötigt, da Zugriff von DWH. siehe KV 02071.
Feldberechtigung daher nur in DWH-Berechtigungssatz</description>
        <inlineHelpText>Feld ist aus fachlicher Sicht obsolet. Wird noch benötigt, da Zugriff von DWH. siehe KV 02071</inlineHelpText>
        <label>Mediagattungs-Segment (obsolet)</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>Inventarklassen</relationshipLabel>
        <relationshipName>Inventarklassen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Preisgruppe__c</fullName>
        <description>Preismerkmal-Name laut Preiskategorie (nur für DWH benötigt)</description>
        <formula>SomDig_Preismerkmal__r.Name</formula>
        <inlineHelpText>Preismerkmal-Name laut Preiskategorie</inlineHelpText>
        <label>Preismerkmal (DWH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Preismerkmal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preismerkmal</label>
        <referenceTo>ADvendio__RateCategory__c</referenceTo>
        <relationshipLabel>Inventarklassen</relationshipLabel>
        <relationshipName>Inventarklassen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <description>Auch Inventarklassifizierungs-Name. Info an der Position kommt über die Belegungseinheit.</description>
        <inlineHelpText>Auch Inventarklassifizierungs-Name. Info an der Position kommt über die Belegungseinheit.</inlineHelpText>
        <label>Rotationstyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Network-Rotation</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Themen-Rotation</fullName>
                </value>
                <value>
                    <fullName>TV-Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Umfeld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_WerbeformDatensatztyp__c</fullName>
        <description>Dient der Identifizierung, ob es ein Adserverprodukt ist oder nicht. Wenn Adserverprodukt, muss der Adserver ausgewählt sein. Wenn Non-Adserverprodukt, ist es Standard.</description>
        <inlineHelpText>Dient der Identifizierung, ob es ein Adserverprodukt ist oder nicht. Wenn Adserverprodukt, muss der Adserver ausgewählt sein. Wenn Non-Adserverprodukt, ist es Standard.</inlineHelpText>
        <label>Werbeform Datensatztyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DFP</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inventarklasse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_InventarklasseNummer__c</columns>
        <columns>SomDig_AuftragstypId__c</columns>
        <columns>SomDig_WerbeformDatensatztyp__c</columns>
        <columns>SomDig_Rotationstyp__c</columns>
        <columns>SomDig_MediagattungsDifferenzierung__c</columns>
        <columns>SomDig_Preismerkmal__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>IN-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventarklassen</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>